<resources>
    <string name="app_name">Junjo</string>
    <string name="food_services">Food Services</string>
    <string name="bed_services">Bed Services</string>
    <string name="new_patient_registration">New Patient Registration</string>
    <string name="show_patient_list">Show Patient List</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_arrival">Date of Arrival</string>
    <string name="priority_level">Priority Level</string>
    <string name="submit">Submit</string>
    <string name="registered_patients">Registered Patients</string>
    <string name="age">Age</string>
    <string name="waiting_since">Waiting Since</string>
    <string name="prior">Prior</string>
    <string name="check_mark">Check Mark</string>
    <string name="use_current_date">Use Current Date</string>
    <string name="patient_description">Patient Description</string>
    <string name="specialist">Specialist</string>
    <string name="line">_________________________________________________________</string>
    <string name="check_profile">Check Profile</string>
    <string name="one">1</string>
</resources>